# TianGong-AI-LangServe

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_freeze.txt  search_local_db_test.py  secrets_dev.toml  test.py  test_vector_db.py
.github/workflows/: docker_publish.yml
.secrects/: secrets_dev.toml
.secrets/: secrets_dev.toml
docker/: redis.conf  supervisord.conf
src/: config.py  main copy.py  main.py  main_backup.py  test.py
src/agents/: agent.py
src/config/: config.py
src/models/: models.py
src/routers/: health_router.py  search_academic_db_authors_router.py  search_academic_db_router.py  search_education_db_router.py  search_esg_db_router.py  search_patent_db_router.py  search_report_db_router.py  search_sci_db_router.py  search_standard_db_router.py  search_textbook_db_router.py  upload_file_router.py  wix_oauth_router.py
src/services/: search_academic_db.py  wix_oauth.py
src/services/lc/agents/: data_analysis_agent.py  openai_agent.py  zhipuai_agent.py
src/services/lc/chains/: openai_chain.py  zhipuai_chain.py
src/services/lc/graphs/: openai_gragh.py
src/services/lc/tools/: search_academic_db_tool.py  search_ali_tool.py  search_esg_tool.py  search_esg_tool_alibaba.py  search_internet_tool.py  search_local_db_tool.py  search_patent_db_tool.py  search_report_tool.py  search_standard_tool.py  search_weaviate_tool.py
src/services/lc/tools/common/: function_calling.py
src/services/standalone/: search_academic_db.py  search_academic_db_authors.py  search_education_db.py  search_esg_db.py  search_lca_db.py  search_patent_db.py  search_report_db.py  search_sci_db.py  search_serverless_vector.py  search_standard_db.py  search_textbook_db.py  search_vector_db.py  upload_file.py
src/services/standalone/lca_data_schema/: schema.json  schema_origin.json
src/services/tools/: search_academic_db copy.py  search_serverless_vector.py
src/services/tools/common/: function_calling.py
src/services/wix/: wix_oauth.py
src/tools/: search_esg.py  search_serverless_vector.py  search_vector_db.py  search_vectordb_tool.py
src/tools/common/: function_calling.py
src/tools/lca_data_schema/: openapi_origin.json
src/utilities/: lca_schema_minified.py  search_weaviate.py  test.py  test_esg_tool.py  test_vector_db.py
static/: kaiwu_config.json  privacy_policy.md
templates/: callback.html  login.html
