[tool.poetry]
name = "tiangong-ai-langserve"
version = "0.1.0"
description = "tiangong-ai-langserve"
authors = ["nanli <linanenv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckduckgo-search = "^5.2.2"
e2b = "^0.14.12"
fastapi = "^0.110.1"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"
langchain-openai = "^0.1.1"
langserve = {extras = ["server"], version = "^0.1.0"}
langsmith = "^0.1.40"
openai = "^1.16.2"
pinecone-client = "^3.2.2"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
redis = "^5.0.3"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
xata = "^1.3.1"
langchain-experimental = "^0.0.56"
httpx-sse = "^0.4.0"
pyjwt = "^2.8.0"
weaviate-client = "^4.5.5"
langgraph = "^0.0.37"

[tool.poetry.group.lint.dependencies]
ruff = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
