[tool.poetry]
name = "tiangong-ai-langserve"
version = "0.1.0"
description = "tiangong-ai-langserve"
authors = ["nanli <linanenv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
duckduckgo-search = "^6.1.5"
e2b = "^0.14.12"
fastapi = "^0.110.1"
httpx-sse = "^0.4.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"
langchain-experimental = "^0.0.59"
langchain-openai = "^0.1.7"
langgraph = "^0.0.50"
langserve = {extras = ["server"], version = "^0.2.0"}
langsmith = "^0.1.59"
openai = "^1.16.2"
pinecone-client = "^4.1.0"
pydantic = "^2.8.2"
pyjwt = "^2.8.0"
python = "^3.12"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
redis = "^5.0.3"
supabase = "^2.7.1"
tenacity = "^8.2.3"
tiktoken = "^0.7.0"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
weaviate-client = "^4.5.5"
xata = "^1.3.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
