[tool.poetry]
name = "tiangong-ai-langserve"
version = "0.1.0"
description = "tiangong-ai-langserve"
authors = ["nanli <linanenv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.11.7"
fastapi = "^0.115.5"
httpx-sse = "^0.4.0"
httpx = "^0.27.2"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
pydantic = "^2.10.1"
pyjwt = "^2.10.0"
python = "^3.12"
python-dateutil = "^2.9.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.17"
redis = "^5.2.0"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
